JNI local refs exceeds capacity warning in NetworkInterface::getAll

XMLWordPrintable

    • b15

        example using 8u122:
        ===
        $ cat NITest.java
        public class NITest {
            public static void main(String[] args) throws java.net.SocketException {
                java.net.NetworkInterface.getNetworkInterfaces();
            }
        }
        $ javac NITest.java
        $ java -Xcheck:jni NITest
        WARNING: JNI local refs: 33, exceeds capacity: 32
                at java.net.NetworkInterface.getAll(Native Method)
                at java.net.NetworkInterface.getNetworkInterfaces(NetworkInterface.java:343)
                at NITest.main(NITest.java:5)
        ===

        While not a serious problem, this creates noise when we are trying to use Xcheck:jni to find real issues. It also prompts questions from users.

              Assignee:
              Jonathan Dowland
              Reporter:
              David Buck
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: