8187450: JNI local refs exceeds capacity warning in NetworkInterface::getAll