test/jdk/java/net/NetworkInterface/Test.java
@@ -24,8 +24,8 @@
 /* @test
  * @bug 4405354 6594296 8058216
  * @library /test/lib
- * @run main Test
- * @run main/othervm -Djava.net.preferIPv4Stack=true Test
+ * @run main Test -Xcheck:jni
+ * @run main/othervm -Djava.net.preferIPv4Stack=true Test -Xcheck:jni
  * @summary Basic tests for NetworkInterface
  */
 import java.net.NetworkInterface;
